--- a/.gitignore
+++ b/.gitignore
@@ -168,17 +168,21 @@ Detect/Ly/mig/*
 Detect/Ly/models/zchr5Net.pth
 Detect/Ly/P0.25_sm.txt
 Detect/Ly/zchr5_sm_imputed_data.txt
-GAN/Stargan-v2/data/*
-GAN/Stargan-v2/assets/*
-GAN/Stargan-v2/100000_nets_ema.ckpt
+
 *.ckpt
 *.pth
 *.JPEG
+*.dat
+*.pt
+*.jpg
+*.csv
 GNN/basic_knowledge/data/*
 MAE/dataset_200/*
 MAE/files/*
-GAN/Stargan-v2/expr/results/celeba_hq/reference.jpg
-*.dat
-*.pt
-GAN/Stargan-v2/expr/results/reference.jpg
-*.jpg
+
+GAN/Stargan-v2/data/*
+GAN/Stargan-v2/assets/*
+GAN/Stargan-v2/expr/results/*
+GAN/Stargan-v2/expr/samples/*
+GAN/Stargan-v2/expr/eval/*
+
